--- a/scss/_ui.scss
+++ b/scss/_ui.scss
@@ -1,7 +1,7 @@
 $text: #fff;
-$main-color: #2A63F2;
+$main-color: #1E1E1E;
 $secondary-color: #eff1f5;
-$primary-color: #000;
+$primary-color: #E88945;
 
-$main-font: 'Manrope', sans-serif;;
-$secondary-font: 'Cambo', serif;;
+$main-font: 'Manrope', sans-serif;
+$secondary-font: 'Cambo', serif;
