--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,2 +1,60 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cambo&display=swap');
+
+@font-face {
+	font-family: 'icomoon';
+	src: url('/source/fonts/icomoon.eot?sywb7a');
+	src: url('/source/fonts/icomoon.eot?sywb7a#iefix') format('embedded-opentype'),
+		url('/source/fonts/icomoon.ttf?sywb7a') format('truetype'),
+		url('/source/fonts/icomoon.woff?sywb7a') format('woff'),
+		url('/source/fonts/icomoon.svg?sywb7a#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	font-display: block;
+}
+
+[class^="_icon-"],
+[class*=" _icon-"] {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: 'icomoon' !important;
+	speak: never;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+._icon-date-01:before {
+	content: "\e900";
+	color: #fff;
+}
+
+._icon-date-02:before {
+	content: "\e901";
+	color: #fff;
+}
+
+._icon-location:before {
+	content: "\e902";
+	color: #fff;
+}
+
+._icon-menu:before {
+	content: "\e903";
+	color: #fff;
+}
+
+._icon-chel:before {
+	content: "\e904";
+	color: #fff;
+}
+
+._icon-search:before {
+	content: "\e905";
+	color: #fff;
+}
