--- a/scss/_section-main.scss
+++ b/scss/_section-main.scss
@@ -1,48 +1,157 @@
 .main {
-    position: relative;
-    min-height: 100vh;
-    background: url(/source/bg.jpg) center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    &__container {
-    }
+	position: relative;
+	min-height: 100vh;
+	background: url(/source/bg.jpg) center center;
+	background-repeat: no-repeat;
+	background-size: cover;
 
-    &__body {
-        padding-top: 116px;
-    }
+	&__container {}
 
-    &__block {
+	&__body {
+		padding-top: 116px;
+	}
 
-    }
+	&__block {}
 
-    &__heading {
-        font-weight: 500;
-        font-size: 104px;
-        line-height: 100%;
-        text-transform: uppercase;
-        max-width: 735px;
-        margin-bottom: 20px;
-        span:nth-child(1) {
-            margin-left: 121px;
-        }
-        span:nth-child(2) {
-            // text-shadow:0px 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255);
-            // -webkit-text-shadow:0px 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255);
-            // -moz-text-shadow:0px 1px 0 rgb(255,255,255),0px -1px 0 rgb(255,255,255),1px 0px 0 rgb(255,255,255),-1px 0px 0 rgb(255,255,255),1px 1px 0 rgb(255,255,255),1px -1px 0 rgb(255,255,255),-1px 1px 0 rgb(255,255,255),-1px -1px 0 rgb(255,255,255);
-            // color:rgb(0, 0, 0);
-            text-shadow: 2px 0 2px #000, 
-            0 2px 2px #000, 
-            -2px 0 2px #000, 
-            0 -2px 2px #000;
-            color: rgba($color: #000000, $alpha: 0);
-        }
-    }
+	&__heading {
+		font-weight: 500;
+		font-size: 104px;
+		line-height: 100%;
+		text-transform: uppercase;
+		max-width: 735px;
+		margin-bottom: 122px;
 
-    &__descriptions {
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 100%;
-        max-width: 140px;
-        margin-left: 170px;
-    }
+		span:nth-child(1) {
+			margin-left: 121px;
+		}
+
+		span:nth-child(2) {}
+
+		span:nth-child(3) {
+			display: flex;
+			align-items: flex-end;
+		}
+	}
+
+	&__descriptions {
+		font-weight: 500;
+		font-size: 18px;
+		line-height: 100%;
+		max-width: 145px;
+		margin-left: 20px;
+		text-transform: none;
+	}
+
+	&__bron-wrapper {}
+
+	&__bron-item-wrapper {
+		display: flex;
+		align-items: center;
+	}
+
+	&__bron-item {
+		border: 1px solid $text;
+		height: 60px;
+		margin-right: 30px;
+		display: flex;
+		align-items: center;
+
+		&:nth-child(1) {
+			width: 306px;
+		}
+
+		&:nth-child(2) {
+			display: flex;
+			align-items: center;
+			width: 476px;
+		}
+
+		&:nth-child(3) {
+			width: 307px;
+		}
+	}
+
+	&__bron-location {
+		font-size: 24px;
+		margin: 0px 20px;
+	}
+
+	&__bron-location-input {
+		color: $text;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 100%;
+		height: 50px;
+		width: 100%;
+
+		&::placeholder {
+			font-weight: 500;
+			font-size: 14px;
+			line-height: 100%;
+		}
+	}
+
+	&__bron-date-item {
+		display: flex;
+		align-items: center;
+	}
+
+	&__bron-date-icon {
+		font-size: 24px;
+		margin: 0px 20px;
+	}
+
+	&__bron-date-input {
+		color: $text;
+		font-family: $main-font;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 100%;
+		width: 112px;
+	}
+
+	&__bron-date-swipe {
+		width: 45px;
+		height: 32px;
+		background: url(/source/swipe.png);
+		background-repeat: no-repeat;
+		background-size: cover;
+		margin: 0px 20px;
+	}
+
+	&__bron-passenger {
+		font-size: 24px;
+		margin: 0px 20px;
+	}
+
+	&__bron-passenger-input {}
+
+	&__bron-btn {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 100%;
+		height: 60px;
+		width: 139px;
+		cursor: pointer;
+		background: linear-gradient(100.55deg, #E88945 0%, #825779 27.08%, #CC4A4E 54.69%, #1684C5 77.6%, #048E92 100%);
+	}
+
+	select {
+		border: none;
+		background: none;
+		outline: none;
+		color: $text;
+		font-weight: 500;
+		font-size: 14px;
+		line-height: 100%;
+		font-family: $main-font;
+		width: 223px;
+
+		option {
+			background: $main-color;
+		}
+	}
 }
