--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,57 +1,59 @@
 .menu {
-    position: fixed;
-    width: 0%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #333;
-    z-index: 99;
-    &__container {
-    }
+	position: fixed;
+	width: 0%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: $main-color;
+	z-index: 99;
 
-    &__body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+	&__container {}
 
-    &__close {
-        position: absolute;
-        top: 50px;
-        right: 100px;
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        background: $secondary-color;
-        cursor: pointer;
-        opacity: 0;
-        transform: translateY(-20px);
-    }
+	&__body {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
 
-    &__navigation {
-        font-size: 2em;
-        margin-top: 200px;
-        li {
-            transform: translateY(20px);
-            opacity: 0;
-        }
-    }
+	&__close {
+		position: absolute;
+		top: 50px;
+		right: 100px;
+		width: 50px;
+		height: 50px;
+		border-radius: 50%;
+		background: $secondary-color;
+		cursor: pointer;
+		opacity: 0;
+		transform: translateY(-20px);
+	}
+
+	&__navigation {
+		font-size: 2em;
+		margin-top: 200px;
+
+		li {
+			transform: translateY(20px);
+			opacity: 0;
+		}
+	}
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 99;
-    width: 130%;
-    height: 100%;
-    background: #333;
-    transform: translateX(-100%);
-    &__el-01 {
-        position: absolute;
-        right: 0;
-        width: 20%;
-        height: 100%;
-        background: $main-color;
-    }
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99;
+	width: 130%;
+	height: 100%;
+	background: #333;
+	transform: translateX(-100%);
+
+	&__el-01 {
+		position: absolute;
+		right: 0;
+		width: 20%;
+		height: 100%;
+		background: $primary-color;
+	}
 }
