--- a/scss/_section-feedback.scss
+++ b/scss/_section-feedback.scss
@@ -6,6 +6,10 @@
 
 	&__body {
 		display: flex;
+
+		&:hover .feedback__block .feedback__image-wrapper .feedback__image {
+			transform: scale(1.05);
+		}
 	}
 
 	&__block {
@@ -13,14 +17,24 @@
 		flex-direction: column;
 	}
 
+	&__heading-wrapper {
+		position: relative;
+		width: 585px;
+		height: 120px;
+		overflow: hidden;
+		margin-bottom: 44px;
+		margin-top: 140px;
+		display: flex;
+		align-items: center;
+	}
+
 	&__heading {
 		font-weight: 500;
 		font-size: 58px;
 		line-height: 100%;
 		text-transform: uppercase;
-		padding-top: 140px;
-		margin-bottom: 44px;
 		max-width: 585px;
+		transform: translateY(150px);
 	}
 
 	&__content {
@@ -67,12 +81,23 @@
 		}
 	}
 
-	&__image {
+	&__image-wrapper {
+		position: relative;
 		margin-top: 140px;
-		width: 476px;
 		height: 220px;
+		width: 0;
+		overflow: hidden;
+	}
+
+	&__image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
 		background: url(/source/feedback.jpg);
 		background-repeat: no-repeat;
 		background-size: cover;
+		transition: .8s ease;
 	}
 }
