--- a/scss/_section-main.scss
+++ b/scss/_section-main.scss
@@ -1,36 +1,76 @@
 .main {
-	position: relative;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
 	min-height: 100vh;
 	background: url(/source/bg.jpg) center center;
 	background-repeat: no-repeat;
 	background-size: cover;
 
-	&__container {}
+	&__cloud {
+		position: absolute;
+		right: 0;
+		top: -130px;
+		width: 100%;
+		height: 100%;
+		background: url(/source/clouds.png);
+		background-size: cover;
+		background-repeat: no-repeat;
+		z-index: 1;
+		pointer-events: none;
+		transition: .2s ease;
+	}
+
+	&__container {
+		position: relative;
+		overflow: hidden;
+	}
 
 	&__body {
 		padding-top: 116px;
 	}
 
-	&__block {}
+	&__block {
+		display: flex;
+		align-items: flex-end;
+		justify-content: space-between;
+		z-index: 2;
+	}
 
 	&__heading {
+		position: relative;
 		font-weight: 500;
 		font-size: 104px;
 		line-height: 100%;
 		text-transform: uppercase;
 		max-width: 735px;
 		margin-bottom: 122px;
+		z-index: 2;
 
-		span:nth-child(1) {
+		h1 {
+			font-weight: 500;
+			font-size: 104px;
+			line-height: 100%;
+			transform: translateX(-150%);
+		}
+
+		h1:nth-child(1) {
 			margin-left: 121px;
 		}
 
-		span:nth-child(2) {}
-
-		span:nth-child(3) {
+		h1:nth-child(3) {
 			display: flex;
 			align-items: flex-end;
 		}
+
+	}
+
+	&__descriptions-wrapper {
+		height: 40px;
+		width: 145px;
+		margin-left: 20px;
+		overflow: hidden;
 	}
 
 	&__descriptions {
@@ -38,8 +78,9 @@
 		font-size: 18px;
 		line-height: 100%;
 		max-width: 145px;
-		margin-left: 20px;
 		text-transform: none;
+		z-index: 2;
+		transform: translateY(100px);
 	}
 
 	&__bron-wrapper {}
@@ -55,6 +96,8 @@
 		margin-right: 30px;
 		display: flex;
 		align-items: center;
+		z-index: 2;
+		transform: translateY(100%);
 
 		&:nth-child(1) {
 			width: 306px;
@@ -88,6 +131,84 @@
 			font-weight: 500;
 			font-size: 14px;
 			line-height: 100%;
+		}
+	}
+
+	&__video {
+		position: relative;
+		width: 0px;
+		height: 182px;
+		margin-bottom: 122px;
+		z-index: 2;
+
+		video {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			top: 0;
+			left: 0;
+			object-fit: cover;
+
+		}
+	}
+
+	&__tabs-wrapper {
+		display: flex;
+		align-items: center;
+		margin-bottom: 20px;
+		z-index: 2;
+	}
+
+	&__tabs-item {
+		position: relative;
+		cursor: pointer;
+		line-height: 100%;
+		margin-right: 40px;
+		transition: .8s ease;
+		height: 21px;
+		overflow: hidden;
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+
+	&__tabs-item-wrapper {
+		font-weight: 500;
+		font-size: 14px;
+		position: relative;
+		transition: .8s ease;
+		height: 21px;
+		transform: translateX(-150px);
+
+		&.active {
+			&::before {
+				content: '';
+				position: absolute;
+				right: 0;
+				bottom: 0px;
+				width: 100%;
+				height: 1px;
+				background: $text;
+				transition: .5s ease;
+			}
+		}
+
+		&:hover::before {
+			right: auto;
+			width: 100%;
+			left: 0;
+		}
+
+		&::before {
+			content: '';
+			position: absolute;
+			right: 0;
+			bottom: 0px;
+			width: 0%;
+			height: 1px;
+			background: $text;
+			transition: .5s ease;
 		}
 	}
 
@@ -136,6 +257,8 @@
 		height: 60px;
 		width: 139px;
 		cursor: pointer;
+		z-index: 2;
+		transform: translateY(100%);
 		background: linear-gradient(100.55deg, #E88945 0%, #825779 27.08%, #CC4A4E 54.69%, #1684C5 77.6%, #048E92 100%);
 	}
 
@@ -153,5 +276,37 @@
 		option {
 			background: $main-color;
 		}
+	}
+
+	&__result-wrapper {
+		overflow: hidden;
+		position: absolute;
+		right: 0;
+		width: 0%;
+		height: 100px;
+		background: $main-color;
+		margin-top: 20px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+
+		&.active {
+			width: 100%;
+		}
+	}
+
+	&__result-text-wrapper {
+		position: relative;
+		width: 280px;
+		height: 20px;
+		overflow: hidden;
+	}
+
+	&__result-text {
+		position: absolute;
+		min-width: 280px;
+		font-size: 14px;
+		font-weight: 500;
+		transform: translateY(50px);
 	}
 }
