--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,6 +44,7 @@ body {
 	background: $text;
 	color: $text;
 	font-size: 16px;
+	position: relative;
 
 	&::-webkit-scrollbar {
 		width: 0;
@@ -61,3 +62,55 @@ body {
 @import '_section-idea';
 @import '_section-feedback';
 @import '_footer';
+
+.overlay-preloader {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: $primary-color;
+	overflow: hidden;
+}
+
+.overlay-preloader-el01 {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 101;
+	top: 0;
+	right: -100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: $main-color;
+}
+
+.overlay-preloader-text-wrapper {
+	position: relative;
+	width: 115px;
+	height: 35px;
+	overflow: hidden;
+}
+
+.overlay-preloader-underline {
+	position: absolute;
+	width: 0%;
+	height: 2px;
+	background: $main-color;
+	left: 0;
+	top: 0;
+}
+
+.overlay-preloader-text {
+	font-weight: 700;
+	position: absolute;
+	font-size: 2em;
+	color: $main-color;
+	font-family: $secondary-font;
+	transform: translateY(-40px);
+}
